--- a/preview/index.html
+++ b/preview/index.html
@@ -40,8 +40,8 @@
       // Begin Swagger UI call region
       const ui = SwaggerUIBundle({
         urls: [
-          {url: "./nova/v15/common/nova-common.yaml", name: "NOVA Common v15"}, 
-          {url: "./nova/v15/pricing/nova-pricing.yaml", name: "NOVA Pricing v15"} 
+          {url: "./nova/v15/common/nova-common.yaml", name: "NOVA Common v15 Preview"}, 
+          {url: "./nova/v15/pricing/nova-pricing.yaml", name: "NOVA Pricing v15 Preview"} 
         ],
         dom_id: '#swagger-ui',
         presets: [
